--- a/react-puppy-pals/src/index.css
+++ b/react-puppy-pals/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme:  light;
+  color: rgba(12, 10, 10, 0.94);
+  background-color: rgb(85, 76, 248);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,8 +15,10 @@
 }
 
 a {
+  font-style: italic;
+  font-size: 0.4cm;
   font-weight: 500;
-  color: #646cff;
+  color: #1a1a1b;
   text-decoration: inherit;
 }
 a:hover {
@@ -27,12 +29,12 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 340px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.7em;
   line-height: 1.1;
 }
 
@@ -48,7 +50,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #111112;
 }
 button:focus,
 button:focus-visible {
